INCLUDES = 
METASOURCES = AUTO
noinst_LIBRARIES = libVbrfixer.a
libVbrfixer_a_SOURCES = ApeTag.cpp ApeTag.h BitReader.h CrcCalc.cpp CrcCalc.h \
	EndianHelper.cpp EndianHelper.h FeedBackInterface.h FileBuffer.cpp FileBuffer.h \
	FixerSettings.cpp FixerSettings.h FrameObjectChecker.h GenHelpers.h Id3Tags.cpp Id3Tags.h \
	Mp3FileObject.cpp Mp3FileObject.h Mp3FileObjectChecker.h Mp3Frame.cpp Mp3Frame.h \
	Mp3Header.cpp Mp3Header.h Mp3Reader.cpp Mp3Reader.h ReadSettings.cpp ReadSettings.h \
	UnknownDataObject.cpp UnknownDataObject.h VbrFixer.cpp VbrFixer.h VbriFrame.cpp VbriFrame.h \
	Version.cpp XingFrame.cpp XingFrame.h LyricsTag.cpp LyricsTag.h
